@@ -1,5 +1,9 @@
 Changes with Apache 2.0.36
 
+  *) Move 100 - Continue support to the HTTP_IN filter so that filters
+     are guaranteed to support 100 - Continue logic without any
+     intervention.  [Justin Erenkrantz]
+
   *) Add HTTP chunked input trailer support.  [Justin Erenkrantz]
 
   *) Rename and export get_mime_headers as ap_get_mime_headers.
